Fix alt text for add code. Align add button to right side

--- a/sass/popup.scss
+++ b/sass/popup.scss
@@ -66,8 +66,7 @@ svg {
   }
 }
 
-#i-menu,
-#i-plus {
+#i-menu {
   position: absolute;
   left: 20px;
   bottom: 0;
@@ -95,6 +94,7 @@ svg {
   }
 }
 
+#i-plus,
 #i-qr {
   position: absolute;
   right: 45px;
